login funcionando, falta fixear el overlaping de los POST en users

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,6 +8,9 @@
 .bodylogin li{
     color: white;
 }
+.bodylogin p{
+    color: white;
+}
 .sectionlogin{
     border-style: solid;
     border-color: #4b4b4b;
